--- a/style.css
+++ b/style.css
@@ -109,8 +109,16 @@ navigation {
   .main-container{
     display: flex;
     flex-direction: row;
-    width: 100%;
+    overflow-x: hidden;
     
+    
+  }
+  #content{
+  width: 100%;
+    flex-basis: 75%;
+  }
+  .aside{
+flex-basis: 25%;
   }
     
   
