--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 *{
     background-color: #D3D3D3 ;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     box-sizing: border-box;
+    padding:0;
+    margin:0;
+    font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+#captionText {
+  color: white;
+  text-align: center;
+  margin-top: 10px;
 }
   
   .footer {
@@ -113,13 +123,116 @@ navigation {
     
     
   }
-  #content{
-  width: 100%;
-    flex-basis: 75%;
-  }
+  
   .aside{
-flex-basis: 25%;
+    max-width:25%;
   }
+  .kontent{
+    max-width:75%;
+  }
+  img {
+    border-radius: 8px;
+    max-width: 100%;
+  height: auto;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+  } 
+  #myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  #myImg:hover {opacity: 0.7;}
+  
+ 
+ 
+  .modal {
+   z-index: 1;
+
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgb(0, 0, 0, );
+    justify-content: center;
+    align-items: center;
+  }
+  
+
+  
+  /* Modal Content (image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+  
+  /* Caption of Modal Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+  /* Add Animation */
+  .modal-content, #caption {  
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @keyframes zoom {
+    from {transform: scale(0.1)} 
+    to {transform: scale(1)}
+  }
+  
+  /* The Close Button */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  /* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+
+
+ 
+  .aside{
+    max-width:100%;
+  }
+
+  .main-container{
+    flex-direction:column;
+  }
+  .modal-content {
+    width: 100%;
+   
+  }
+}
+h1{
+  text-align: center;
+}
     
   
   
