--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     background: #708090;
     color: #fff;
     padding: 20px 0;
+    margin-top: 20px;
   }
   
   .footer-content {
@@ -120,6 +121,8 @@ navigation {
     display: flex;
     flex-direction: row;
     overflow-x: hidden;
+    padding: 10px;
+    margin: 10px;
     
     
   }
